syntax = "proto3";

package de.grid.grpcdemo.grpc.service;

option java_package = "de.grid.grpcdemo.adapter.grpc.service";
option java_multiple_files = true;

enum Gender {
    MALE = 0;
    FEMALE = 1;
    OTHER = 2;
}

message Person {
    string id = 1;
    string name = 2;
    string firstname = 3;
    string dateOfBirth = 4;
    Gender gender = 5;
}


message CreatePersonRequest {
    Person person = 1;
}

message CreatePersonResponse {
    string personId = 1;
}

message QueryPersonRequest {
    string personId = 1;
}

message QueryPersonResponse {
    Person person = 1;
}

message QueryAllPersonsRequest {
}

message QueryAllPersonsResponse {
    repeated Person persons = 1;
}

service PersonService {
    rpc createPerson(CreatePersonRequest) returns (CreatePersonResponse) {}
    rpc queryPerson(QueryPersonRequest) returns (QueryPersonResponse) {};
    rpc queryAllPersons(QueryAllPersonsRequest) returns (QueryAllPersonsResponse) {};
}


